--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    <div class="container body-content h-100">
         @RenderBody()
     </div>
 
