--- a/Content/Site.css
+++ b/Content/Site.css
@@ -246,3 +246,24 @@ option {
     background: black;
     border: none;
 }
+
+.card-btn {
+    background-color: var(--color1) !important;
+    border: 1px solid var(--color1) !important;
+}
+
+#cards-container {
+    height: 80%;
+    gap: 6rem;
+}
+
+#cards-container {
+    color: #525252;
+}
+
+.card-img-top {
+    width: auto;
+    min-height: 191px;
+    object-fit: cover;
+}
+
