--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,32 +2,32 @@
     ViewBag.Title = "Home Page";
 }
 
-<main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
 
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
+<div id="cards-container" class="d-flex w-100 h-75 align-items-center justify-content-center">
+    <div class="card" style="width: 18rem;">
+        <img src="~/fotos/players/Ronaldo.jpg" class="card-img-top" alt="ronaldo">
+        <div class="card-body">
+            <h5 class="card-title">Players</h5>
+            <p class="card-text">Explore all the avaible players, find their teams and where they come from!</p>
+            @Html.ActionLink("See Players", "PlayerList", "Player", null, new { @class = "card-btn btn btn-primary" })
+        </div>
     </div>
-</main>
+
+    <div class="card" style="width: 18rem;">
+        <img src="~/fotos/teams/Equipas.jpg" class="card-img-top" alt="equipas">
+        <div class="card-body">
+            <h5 class="card-title">Teams</h5>
+            <p class="card-text">Discover football teams' histories, their foundation year and the country they were born in!</p>
+            @Html.ActionLink("See Players", "TeamList", "Team", null, new { @class = "card-btn btn btn-primary" })
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="~/fotos/coaches/jose-mourinho.jpg" class="card-img-top" alt="jose mourinho">
+        <div class="card-body">
+            <h5 class="card-title">Trainers</h5>
+            <p class="card-text">Explore our team's coaches and their history, capabilities, license and more!</p>
+            @Html.ActionLink("See Players", "TrainerList", "Trainer", null, new { @class = "card-btn btn btn-primary" })
+        </div>
+    </div>
+</div>
