--- a/Views/Player/EditPlayer.cshtml
+++ b/Views/Player/EditPlayer.cshtml
@@ -63,17 +63,17 @@
             }
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+        <div class="form-group d-flex align-items-center gap-4">
+            <div>
                 <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+            <div>
+                @Html.ActionLink("Back to List", "PlayerList", null, new { @class="btn btn-secondary" })
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "PlayerList")
-</div>
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
