--- a/Views/Player/PlayerList.cshtml
+++ b/Views/Player/PlayerList.cshtml
@@ -44,7 +44,7 @@
                 },
                 "processing": true,
                 "filter": true,
-                "lengthMenu": [[3, 5, 10, 25, 50, -1], [3, 5, 10, 25, 50, "Todos"]],
+                "lengthMenu": [[3, 5, 10, 25, 50, -1], [3, 5, 10, 25, 50, "All"]],
                 "pageLength": 3,
                 "ajax": {
                     'url': "/Player/GetPlayers",
