--- a/Views/Team/DeleteTeam.cshtml
+++ b/Views/Team/DeleteTeam.cshtml
@@ -4,53 +4,39 @@
     ViewBag.Title = "DeleteTeam";
 }
 
-<h2>DeleteTeam</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Team</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Team Name
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.team_name)
-        </dd>
-
-        <dt>
-            Founded in
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.foundation_year)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.country)
-        </dt>
-
-        <dd>
-           Country
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.photo_path)
-        </dt>
-
-        <dd>
+    <div>
+        <div class="form-group mt-2 mb d-flex align-items-center gap-4">
             @if (Model.photo_path == null || String.IsNullOrEmpty(Model.photo_path))
             {
-                <img width="120" src="@Url.Content("~/fotos/teams/no-logo.png")" alt="" />
+                <img width="60" src="@Url.Content("~/fotos/teams/no-logo.png")" alt="" />
             }
             else
             {
-                <img width="120" src="@Url.Content("~/fotos/teams/" + System.IO.Path.GetFileName(Model.photo_path))" alt="" />
+                <img width="60" src="@Url.Content("~/fotos/teams/" + System.IO.Path.GetFileName(Model.photo_path))" alt="" />
             }
-        </dd>
+            <h4>@Model.team_name</h4>
+        </div>
 
-    </dl>
+        <div class="form-horizontal d-flex flex-column gap-3 mt-3">
+            <div class="form-group">
+                @Html.LabelFor(model => model.team_name, "Name", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.team_name, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.foundation_year, "Founded in", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.foundation_year, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.country, "Country", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.country, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+            </div>
+        </div>
+    </div>
 
     @using (Html.BeginForm("DelTeam", "Team"))
     {
@@ -58,9 +44,9 @@
 
         @Html.HiddenFor(model => model.team_id)
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            @Html.ActionLink("Back to List", "TeamList")
+        <div class="form-actions no-color d-flex gap-2 mt-4">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            @Html.ActionLink("Back to List", "TeamList", null, new { @class="btn btn-primary" })
         </div>
     }
 </div>
