--- a/Views/Team/EditTeam.cshtml
+++ b/Views/Team/EditTeam.cshtml
@@ -57,9 +57,12 @@
             }
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+        <div class="form-group d-flex align-items-center gap-4">
+            <div>
                 <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+            <div>
+                @Html.ActionLink("Back to List", "TeamList", null, new { @class = "btn btn-secondary" })
             </div>
         </div>
     </div>
