--- a/Views/Team/TeamList.cshtml
+++ b/Views/Team/TeamList.cshtml
@@ -43,7 +43,7 @@
                 },
                 "processing": true,
                 "filter": true,
-                "lengthMenu": [[3, 5, 10, 25, 50, -1], [3, 5, 10, 25, 50, "Todos"]],
+                "lengthMenu": [[3, 5, 10, 25, 50, -1], [3, 5, 10, 25, 50, "All"]],
                 "pageLength": 3,
                 "ajax": {
                     'url': "/Team/GetTeams",
