--- a/Views/Trainer/EditTrainer.cshtml
+++ b/Views/Trainer/EditTrainer.cshtml
@@ -49,7 +49,7 @@
             </div>
             @if (!string.IsNullOrEmpty(Model.photo_path))
             {
-                <img width="180" class="figure-img m-3" id="foto" src="@Url.Content("~/fotos/coachs/" + System.IO.Path.GetFileName(Model.photo_path))" alt="Team Photo" />
+                <img width="180" class="figure-img m-3" id="foto" src="@Url.Content("~/fotos/coaches/" + System.IO.Path.GetFileName(Model.photo_path))" alt="Team Photo" />
             }
             else
             {
@@ -57,9 +57,12 @@
             }
         </div>
 
-        <div class="form-group mt-2">
-            <div class="col-md-offset-2 col-md-10">
+        <div class="form-group d-flex align-items-center gap-4">
+            <div>
                 <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+            <div>
+                @Html.ActionLink("Back to List", "TrainerList", null, new { @class = "btn btn-secondary" })
             </div>
         </div>
     </div>
